tests/fixtures/errors/unknown_dimension.gcl
param x: NoSuchDim = 1.0;
